--- a/index.html
+++ b/index.html
@@ -1,200 +1,134 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KPKNL INTERNAL</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f4f4f4;
+      padding: 0;
+      background-color: #f7f7f7;
     }
-
     header {
-      background-color: #007bff;
-      color: white;
-      padding: 20px 0;
       text-align: center;
+      background-color: #004aad;
+      color: white;
+      padding: 20px 10px;
     }
-
     header img {
-      height: 100px;
       display: block;
       margin: 0 auto 10px auto;
+      width: 120px;
+      border-radius: 10px;
     }
-
     h1 {
       margin: 0;
       font-size: 26px;
     }
-
-    .container {
-      width: 90%;
-      max-width: 1000px;
-      margin: 30px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    h2 {
-      text-align: center;
-      color: #333;
-    }
-
-    #search-bar {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      margin: 15px 0;
-      font-size: 16px;
-    }
-
-    .produk-list {
+    .produk-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
-      margin-top: 10px;
+      padding: 20px;
     }
-
     .produk {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 15px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       text-align: center;
-      background-color: #fafafa;
-      transition: 0.3s;
+      padding: 15px;
     }
-
-    .produk:hover {
-      transform: scale(1.03);
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-
     .produk img {
       width: 100%;
-      height: 180px;
+      height: 200px;
       object-fit: cover;
-      border-radius: 8px;
+      border-radius: 10px;
     }
-
     .produk h3 {
-      margin: 10px 0 5px;
-      color: #007bff;
+      margin: 10px 0 5px 0;
     }
-
     .produk p {
-      margin: 0;
       color: #555;
     }
-
-    .harga {
-      font-weight: bold;
-      color: green;
-      margin-top: 10px;
-      font-size: 18px;
-    }
-
     .beli-btn {
       display: inline-block;
-      margin-top: 10px;
-      padding: 8px 15px;
-      background-color: #25D366;
+      background-color: #28a745;
       color: white;
       text-decoration: none;
+      padding: 10px 20px;
       border-radius: 5px;
-      transition: background 0.3s;
+      margin-top: 10px;
+      transition: 0.3s;
     }
-
     .beli-btn:hover {
-      background-color: #128C7E;
+      background-color: #218838;
+    }
+    footer {
+      background-color: #004aad;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="lelang_indonesia_edit_copy.jpg" alt="Logo KPKNL INTERNAL">
+    <img src="https://raw.githubusercontent.com/sikuwonwon/kpknl-internal/main/lelang_indonesia_edit_copy.jpg" alt="Logo KPKNL" />
     <h1>KPKNL INTERNAL</h1>
+    <p>Penjualan Fine Gold 999.9 Sertifikat LBMA & Certieye dengan harga tetap</p>
   </header>
 
-  <div class="container">
-    <h2>Daftar Barang</h2>
-
-    <input type="text" id="search-bar" placeholder="Cari barang..." onkeyup="cariProduk()">
-
-    <div class="produk-list" id="produkList">
-
-      <!-- Fine Gold 500g -->
-      <div class="produk">
-        <img src="lm 500gr.jpg" alt="Fine Gold 999.9 LBMA 500g">
-        <h3>Fine Gold 999.9 Sertifikat LBMA (500 g)</h3>
-        <p>Emas batangan Antam 500 gram bersertifikat LBMA dengan kadar kemurnian 999.9 (24 karat).</p>
-        <p class="harga">Rp 900.000.000</p>
-        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%20500g%20LBMA" class="beli-btn" target="_blank">Beli Sekarang</a>
-      </div>
-
-      <!-- Fine Gold 250g -->
-      <div class="produk">
-        <img src="8d0cb544-52ee-4e39-aeeb-310bfd76ecdc.jpg" alt="Fine Gold 999.9 LBMA 250g">
-        <h3>Fine Gold 999.9 Sertifikat LBMA (250 g)</h3>
-        <p>Emas batangan Antam 250 gram bersertifikat LBMA, kadar 999.9 (24 karat).</p>
-        <p class="harga">Rp 450.000.000</p>
-        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%20250g%20LBMA" class="beli-btn" target="_blank">Beli Sekarang</a>
-      </div>
-
-      <!-- Fine Gold 50g -->
-      <div class="produk">
-        <img src="48f4dbb4f57cefcf08ec89df9adee3ed.jpg" alt="Fine Gold 999.9 50g">
-        <h3>Fine Gold 999.9 Certieye (50 g)</h3>
-        <p>Emas Antam bersertifikat Certieye dengan kemurnian 999.9.</p>
-        <p class="harga">Rp 90.000.000</p>
-        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%2050g" class="beli-btn" target="_blank">Beli Sekarang</a>
-      </div>
-
-      <!-- Fine Gold 25g -->
-      <div class="produk">
-        <img src="pic_logam_2021_25gr_040321170308_ll.jpg.jpg" alt="Fine Gold 999.9 Certieye 25g">
-        <h3>Fine Gold 999.9 Certieye (25 g)</h3>
-        <p>Emas Antam 25 gram bersertifikat Certieye.</p>
-        <p class="harga">Rp 45.000.000</p>
-        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%2025g" class="beli-btn" target="_blank">Beli Sekarang</a>
-      </div>
-
-      <!-- Fine Gold 10g -->
-      <div class="produk">
-        <img src="antam_logam_mulia_antam_010_gram_full01_phlanbeg.webp" alt="Fine Gold 999.9 Certieye 10g">
-        <h3>Fine Gold 999.9 Certieye (10 g)</h3>
-        <p>Emas Antam 10 gram bersertifikat Certieye.</p>
-        <p class="harga">Rp 18.000.000</p>
-        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%2010g" class="beli-btn" target="_blank">Beli Sekarang</a>
-      </div>
-
-      <!-- Fine Gold 1 Kilo -->
-      <div class="produk">
-        <img src="Lm 1000 gr.jpg" alt="Fine Gold 999.9 LBMA 1 Kilo">
-        <h3>Fine Gold 999.9 Sertifikat LBMA (1 Kilo)</h3>
-        <p>Emas batangan Antam 1 kilogram bersertifikat LBMA dengan kadar kemurnian 999.9 (24 karat).</p>
-        <p class="harga">Rp 1.800.000.000</p>
-        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%201%20Kilo%20LBMA" class="beli-btn" target="_blank">Beli Sekarang</a>
-      </div>
-
+  <section class="produk-container">
+    <div class="produk">
+      <img src="https://raw.githubusercontent.com/sikuwonwon/kpknl-internal/main/antam_logam_mulia_antam_010_gram_full01_phlanbeg.webp" alt="Fine Gold 10g Certieye">
+      <h3>Fine Gold 999.9 Certieye (10g)</h3>
+      <p>Harga: Rp 18.000.000</p>
+      <a href="https://wa.me/62817581254?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%2010g%20Certieye" class="beli-btn" target="_blank">Beli Sekarang</a>
     </div>
-  </div>
 
-  <script>
-    function cariProduk() {
-      const input = document.getElementById('search-bar').value.toLowerCase();
-      const produkList = document.querySelectorAll('.produk');
-      produkList.forEach(produk => {
-        const namaProduk = produk.querySelector('h3').textContent.toLowerCase();
-        produk.style.display = namaProduk.includes(input) ? '' : 'none';
-      });
-    }
-  </script>
+    <div class="produk">
+      <img src="https://raw.githubusercontent.com/sikuwonwon/kpknl-internal/main/pic_logam_2021_25gr_040321170308_ll.jpg.jpg" alt="Fine Gold 25g Certieye">
+      <h3>Fine Gold 999.9 Certieye (25g)</h3>
+      <p>Harga: Rp 45.000.000</p>
+      <a href="https://wa.me/62817581254?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%2025g%20Certieye" class="beli-btn" target="_blank">Beli Sekarang</a>
+    </div>
+
+    <div class="produk">
+      <img src="https://raw.githubusercontent.com/sikuwonwon/kpknl-internal/main/48f4dbb4f57cefcf08ec89df9adee3ed.jpg" alt="Fine Gold 50g LBMA">
+      <h3>Fine Gold 999.9 LBMA (50g)</h3>
+      <p>Harga: Rp 90.000.000</p>
+      <a href="https://wa.me/62817581254?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%2050g%20LBMA" class="beli-btn" target="_blank">Beli Sekarang</a>
+    </div>
+
+    <div class="produk">
+      <img src="https://raw.githubusercontent.com/sikuwonwon/kpknl-internal/main/8d0cb544-52ee-4e39-aeeb-310bfd76ecdc.jpg" alt="Fine Gold 250g LBMA">
+      <h3>Fine Gold 999.9 LBMA (250g)</h3>
+      <p>Harga: Rp 450.000.000</p>
+      <a href="https://wa.me/62817581254?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%20250g%20LBMA" class="beli-btn" target="_blank">Beli Sekarang</a>
+    </div>
+
+    <div class="produk">
+      <img src="https://raw.githubusercontent.com/sikuwonwon/kpknl-internal/main/lm%20500gr.jpg" alt="Fine Gold 500g LBMA">
+      <h3>Fine Gold 999.9 LBMA (500g)</h3>
+      <p>Harga: Rp 900.000.000</p>
+      <a href="https://wa.me/62817581254?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%20500g%20LBMA" class="beli-btn" target="_blank">Beli Sekarang</a>
+    </div>
+
+    <div class="produk">
+      <img src="https://raw.githubusercontent.com/sikuwonwon/kpknl-internal/main/Lm%201000%20gr.jpg" alt="Fine Gold 1kg LBMA">
+      <h3>Fine Gold 999.9 LBMA (1kg)</h3>
+      <p>Harga: Rp 1.800.000.000</p>
+      <a href="https://wa.me/62817581254?text=Halo,%20saya%20ingin%20membeli%20Fine%20Gold%201kg%20LBMA" class="beli-btn" target="_blank">Beli Sekarang</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 KPKNL INTERNAL | Semua hak dilindungi</p>
+  </footer>
 
 </body>
 </html>
